k8s-demo-app-web.yaml

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: k8s-demo-app-web
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-demo-app-web
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: "30%"
      maxSurge: "90%"
  template:
    metadata:
      labels:
        app: k8s-demo-app-web
        version: current
    spec:
      containers:
      - name: k8s-demo-app-web
        image: niklaushirt/k8sdemo:1.0.0
        imagePullPolicy: Always 
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 20
          periodSeconds: 10
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: "50m"
            memory: "50Mi"
          limits:
            cpu: "50m"
            memory: "50Mi"
