k8s-demo-app-backend-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: k8s-demo-app-backend-service
spec:
  selector:
    app: k8s-demo-app-backend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 32124
  type: NodePort
