k8s-demo-app-web-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: k8s-demo-app-web-service
spec:
  selector:
    app: k8s-demo-app-web
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 32123
  type: NodePort
