k8s-demo-app-web-route.yaml

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: k8s-demo-app-web
  name: k8s-demo-app-web-route
spec:
  #host: k8s-demo-app-web-service.apps.91.121.172.228.nip.io
  to:
    kind: Service
    name: k8s-demo-app-web-service
    weight: 100
  wildcardPolicy: None
